--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -5,11 +5,22 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
+body {
+  margin: 0;
+  padding: 0;
   background-image: url('/background.png');
   background-size: cover;
-  height: 100%;
   background-repeat: no-repeat;
+  height: 100%;
+}
+
+.bg-cover {
+  /* background-image: url('/background.png');
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center; */
 }
 
 .font-poppins {
