--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,9 +8,10 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url('/background.png');
+  background-image: url('/background-1.png');
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: top;
   height: 100%;
 }
 
