--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,13 +5,13 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+html, body {
   margin: 0;
   padding: 0;
   background-image: url('/background-1.png');
   background-size: cover;
   background-repeat: no-repeat;
-  /* background-position: top; */
+  object-fit: fill;
   max-height: max-content; 
 }
 
