--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,7 @@ html, body {
   background-position: center;
   background-image: url('/background-1.png');
   background-repeat: no-repeat;
+  background-attachment: fixed;
   width: 100%;
   height: 100%;
   max-height: max-content;
